--- a/app/src/main/res/layout/activity_para.xml
+++ b/app/src/main/res/layout/activity_para.xml
@@ -94,7 +94,7 @@
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="8dp"
                 android:onClick="ResetValues"
-                android:text="You have not selected any parameter"
+                android:text="You have not selected any Parameter"
                 android:textColor="@android:color/background_dark"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -106,7 +106,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginBottom="40dp"
                 android:background="@color/colorPrimary"
                 android:onClick="OSr"
                 android:text="Show Result"
@@ -120,9 +120,9 @@
                 android:layout_width="184dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="40dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginBottom="40dp"
                 android:background="@color/red"
                 android:onClick="ResetValues"
                 android:text="Reset Parameters"
