--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -13,12 +13,12 @@
         android:layout_marginTop="40dp"
         android:text="@string/textView1"
         android:textStyle="italic"
+        android:textColor="@android:color/holo_blue_bright"
+        android:textSize="36sp"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:textColor="@android:color/holo_blue_bright"
-        tools:textSize="36sp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
@@ -29,11 +29,11 @@
         android:layout_marginEnd="16dp"
         android:background="@android:color/white"
         android:text="@string/textView2"
+        android:textSize="18sp"
         android:textColor="@android:color/holo_purple"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView1"
-        tools:textSize="18sp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView1" />
 
     <TextView
         android:id="@+id/textView3"
@@ -44,10 +44,10 @@
         android:layout_marginEnd="16dp"
         android:text="@string/textView3"
         android:textColor="@color/green"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        tools:textSize="24sp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
         android:id="@+id/textView4"
@@ -57,12 +57,11 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
         android:text="@string/textView4"
+        android:textColor="@android:color/holo_orange_light"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
-        tools:textColor="@android:color/holo_orange_light"
-        tools:textSize="18sp" />
-
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
@@ -71,11 +70,11 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
         android:text="@string/textView5"
+        android:textColor="@android:color/holo_red_dark"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
-        tools:textColor="@android:color/holo_red_dark"
-        tools:textSize="24sp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <Button
         android:id="@+id/button7"
